--- a/style.scss
+++ b/style.scss
@@ -51,6 +51,16 @@ ul{
     min-height: 100vh;
     color:var(--text-color);
 }
+
+.grid{
+    display: grid;
+    gap: 1rem;
+}
+
+.title{
+    font-size: 2rem;
+    font-weight: bolder;
+}
 //apply dark mode
 .dark-mode-checkbox:checked + .wrapper{
     --body-bg: var(--dark-bg);
@@ -77,6 +87,7 @@ ul{
         transition: all 0.5s;
     }
 }
+
 
 // header 
 
@@ -179,4 +190,345 @@ ul{
      }
 
     }
+}
+// section1 hero
+.section1{
+    background: var(--color-yellow);
+    margin: 10rem auto 5rem auto;
+    width: 90vw;
+    padding: 0 2rem;
+
+    grid-template-areas: "left right";
+
+    .left{
+        grid-area: left;
+        margin-top: -4rem;
+        justify-content: center;
+        align-items: center;
+
+        img{
+            height: 115%;
+        }
+    }
+    .right{
+        grid-area: right;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 0.8rem;
+
+        div{
+            flex-direction: column;
+            gap: 0.6rem;
+
+            .name{
+                font-size: 4rem;
+                font-weight: bold;
+                color: black;
+            }
+            .tag{
+                color: black;
+                font-size: 2.2rem;
+            }
+        }
+        button{
+            border: none;
+            padding: 0.8rem 1.2rem;
+            border-radius: 2rem;
+            cursor:pointer;
+            background: var(--color-dark);
+            color: white;
+            margin: 1rem 0;
+        
+            a {
+                i{
+                color: var(--color-yellow);
+                }
+            }   
+        }
+
+    }
+}
+// section2  banner
+.section2{
+    margin-bottom: 7rem;
+    .info-container{
+        max-width: 80%;
+        margin: auto;
+        padding: 2rem;
+        min-height: 7rem;
+        border: 2px solid var(--border-color);
+        border-radius: 100px;
+        justify-content: center;
+        align-items: center;
+    }
+    .info-list{
+        width: 100%;
+        color: var(--text-color);
+        justify-content: space-around;
+        align-items: center;
+
+
+        .info-content{
+            .icon-container{
+                width: 3rem;
+                height: 3rem;
+                border-radius: 50%;
+                background-color: var(--color-yellow);
+                
+                justify-content: center;
+                align-items: center;
+                color: white;
+            }
+            i{
+                font-size: 1.4rem;
+            }
+        }
+        span{
+            h5{
+                font-weight:bolder;
+                letter-spacing: 2px;
+            
+            }
+            p{
+                color: var(--color-yellow);
+            }
+        }
+        .info-divider{
+            width: 2px;
+            height: 35px;
+            background: grey;
+        }
+    }
+
+
+    
+}
+
+// SECTION3 skills
+
+.section3{
+    width: 80%;
+    margin: 7rem;
+    padding: 7rem auto;
+   
+  
+    
+    .skills-container{
+        justify-content: center;
+        gap: 8rem;
+
+        div{
+            flex-direction: column;
+            align-items: center;
+            font-weight: bolder;
+
+            i{
+                font-size: 3rem;
+            }
+        }
+    }
+}
+
+// section4 projects
+.section4{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+
+    .projects-container{
+        width: 100%;
+        padding: 3rem 2rem 0 2rem;
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+        gap: 2.5rem;
+
+
+        .project-card{
+            flex-direction: column;
+            box-shadow: 0 4px 12px 4px rgba(0, 0, 0, 0.319);
+           border-radius: 8px;
+            .top{
+
+                img{
+                width: 100%;
+                height: 250px;
+                border-radius: 8px 8px 0 0;
+            }
+            }
+            .bottom{
+                
+                padding: 2rem;
+
+                p{
+                    &:nth-child(1){
+                        font-weight: bolder;
+                    }
+                }
+            }
+        }
+
+    }
+}
+// Section5 about
+.section5{
+    margin: 4rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 5rem;
+    
+
+    .about-container{
+        padding: 3rem;
+        gap: 5rem;
+        
+        .left{
+            width: 50%;
+            padding: 0 2rem;
+
+            .img{
+                width: 100%;
+            }
+        }
+        
+        
+        .right{
+        flex-direction: column;
+        width: 50%;
+        gap: 2rem;
+        padding: 0 2rem;
+
+            h2{
+                font-size: 3.5rem;
+            }
+
+            p{
+                &:nth-child(3){
+                    font-weight: 600;
+                }
+            }
+            div{
+                flex-direction: column;
+                
+                .tag{
+                    font-weight: 600;
+                }
+                div{
+                    flex-direction: row;
+
+                    span{
+                        padding: 0.5rem 0.7rem;
+                        border-radius: 10px;
+                        &:hover{
+                            cursor: pointer;
+                            background: rgba(128, 128, 128, 0.408);
+                            transition:all 0.3s;
+                            color:white;
+                            box-shadow: 0 0 10px grey;
+                        }
+                    }
+                   
+                }
+            }
+        }
+    }
+}
+
+// Section 6 contact
+.section6{
+    margin: 4rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .socials{
+        padding: 4rem 7rem;
+        width: 100%;
+        justify-content: space-between;
+
+        i{
+            font-size: 4rem;
+
+            &:nth-child(1){
+                color: #0A66C2;
+            }
+            &:nth-child(2){
+                color:  #6e5494;
+            }
+           
+            &:nth-child(3){
+                color: #1DA1F2;
+            }
+            &:nth-child(4){
+                color: #FF0000;
+            }
+            
+        }
+    }
+
+    .email-section{
+        background: var(--border-color);
+        padding: 1rem 2rem;
+        border-radius: 100px;
+        color: var(--body-bg);
+
+        .email{
+            justify-content: center;
+            align-items: center;
+            .send{
+            background: var(--color-yellow);
+            width: 3rem;
+            height: 3rem;
+            border-radius: 100px;
+
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            }
+        }   
+
+    }
+
+}
+// footer 
+footer{
+    background: #000;
+    color: white;
+    padding: 4rem ;
+    text-align: center;
+
+    .footer-container{
+        justify-content: space-around;
+        margin-bottom: 4rem;
+    
+    .links,.socials{
+        flex-direction: column;
+       
+        h3{
+            text-transform: uppercase;
+        }
+        ul{
+            flex-direction: column;
+            align-items: flex-start;
+
+            li{
+                a {
+                    &:hover{
+                        color: var(--color-yellow);
+                        transition:allall 0.5s
+                    }
+                }
+            }
+   
+        }
+    }
+    
+       
+    
+}
+.footer-bottom{
+    text-align: center;
+}
 }
