--- a/style.css
+++ b/style.css
@@ -42,6 +42,16 @@ ul {
   color: var(--text-color);
 }
 
+.grid {
+  display: grid;
+  gap: 1rem;
+}
+
+.title {
+  font-size: 2rem;
+  font-weight: bolder;
+}
+
 .dark-mode-checkbox:checked + .wrapper {
   --body-bg: var(--dark-bg);
   --text-color: var(--dark-text-color);
@@ -134,4 +144,267 @@ ul {
   .primary-header .right #check:checked ~ ul {
     left: calc(100% - 15rem);
   }
+}
+.section1 {
+  background: var(--color-yellow);
+  margin: 10rem auto 5rem auto;
+  width: 90vw;
+  padding: 0 2rem;
+  grid-template-areas: "left right";
+}
+.section1 .left {
+  grid-area: left;
+  margin-top: -4rem;
+  justify-content: center;
+  align-items: center;
+}
+.section1 .left img {
+  height: 115%;
+}
+.section1 .right {
+  grid-area: right;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 0.8rem;
+}
+.section1 .right div {
+  flex-direction: column;
+  gap: 0.6rem;
+}
+.section1 .right div .name {
+  font-size: 4rem;
+  font-weight: bold;
+  color: black;
+}
+.section1 .right div .tag {
+  color: black;
+  font-size: 2.2rem;
+}
+.section1 .right button {
+  border: none;
+  padding: 0.8rem 1.2rem;
+  border-radius: 2rem;
+  cursor: pointer;
+  background: var(--color-dark);
+  color: white;
+  margin: 1rem 0;
+}
+.section1 .right button a i {
+  color: var(--color-yellow);
+}
+
+.section2 {
+  margin-bottom: 7rem;
+}
+.section2 .info-container {
+  max-width: 80%;
+  margin: auto;
+  padding: 2rem;
+  min-height: 7rem;
+  border: 2px solid var(--border-color);
+  border-radius: 100px;
+  justify-content: center;
+  align-items: center;
+}
+.section2 .info-list {
+  width: 100%;
+  color: var(--text-color);
+  justify-content: space-around;
+  align-items: center;
+}
+.section2 .info-list .info-content .icon-container {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  background-color: var(--color-yellow);
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+.section2 .info-list .info-content i {
+  font-size: 1.4rem;
+}
+.section2 .info-list span h5 {
+  font-weight: bolder;
+  letter-spacing: 2px;
+}
+.section2 .info-list span p {
+  color: var(--color-yellow);
+}
+.section2 .info-list .info-divider {
+  width: 2px;
+  height: 35px;
+  background: grey;
+}
+
+.section3 {
+  width: 80%;
+  margin: 7rem;
+  padding: 7rem auto;
+}
+.section3 .skills-container {
+  justify-content: center;
+  gap: 8rem;
+}
+.section3 .skills-container div {
+  flex-direction: column;
+  align-items: center;
+  font-weight: bolder;
+}
+.section3 .skills-container div i {
+  font-size: 3rem;
+}
+
+.section4 {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.section4 .projects-container {
+  width: 100%;
+  padding: 3rem 2rem 0 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 2.5rem;
+}
+.section4 .projects-container .project-card {
+  flex-direction: column;
+  box-shadow: 0 4px 12px 4px rgba(0, 0, 0, 0.319);
+  border-radius: 8px;
+}
+.section4 .projects-container .project-card .top img {
+  width: 100%;
+  height: 250px;
+  border-radius: 8px 8px 0 0;
+}
+.section4 .projects-container .project-card .bottom {
+  padding: 2rem;
+}
+.section4 .projects-container .project-card .bottom p:nth-child(1) {
+  font-weight: bolder;
+}
+
+.section5 {
+  margin: 4rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 5rem;
+}
+.section5 .about-container {
+  padding: 3rem;
+  gap: 5rem;
+}
+.section5 .about-container .left {
+  width: 50%;
+  padding: 0 2rem;
+}
+.section5 .about-container .left .img {
+  width: 100%;
+}
+.section5 .about-container .right {
+  flex-direction: column;
+  width: 50%;
+  gap: 2rem;
+  padding: 0 2rem;
+}
+.section5 .about-container .right h2 {
+  font-size: 3.5rem;
+}
+.section5 .about-container .right p:nth-child(3) {
+  font-weight: 600;
+}
+.section5 .about-container .right div {
+  flex-direction: column;
+}
+.section5 .about-container .right div .tag {
+  font-weight: 600;
+}
+.section5 .about-container .right div div {
+  flex-direction: row;
+}
+.section5 .about-container .right div div span {
+  padding: 0.5rem 0.7rem;
+  border-radius: 10px;
+}
+.section5 .about-container .right div div span:hover {
+  cursor: pointer;
+  background: rgba(128, 128, 128, 0.408);
+  transition: all 0.3s;
+  color: white;
+  box-shadow: 0 0 10px grey;
+}
+
+.section6 {
+  margin: 4rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.section6 .socials {
+  padding: 4rem 7rem;
+  width: 100%;
+  justify-content: space-between;
+}
+.section6 .socials i {
+  font-size: 4rem;
+}
+.section6 .socials i:nth-child(1) {
+  color: #0A66C2;
+}
+.section6 .socials i:nth-child(2) {
+  color: #6e5494;
+}
+.section6 .socials i:nth-child(3) {
+  color: #1DA1F2;
+}
+.section6 .socials i:nth-child(4) {
+  color: #FF0000;
+}
+.section6 .email-section {
+  background: var(--border-color);
+  padding: 1rem 2rem;
+  border-radius: 100px;
+  color: var(--body-bg);
+}
+.section6 .email-section .email {
+  justify-content: center;
+  align-items: center;
+}
+.section6 .email-section .email .send {
+  background: var(--color-yellow);
+  width: 3rem;
+  height: 3rem;
+  border-radius: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer {
+  background: #000;
+  color: white;
+  padding: 4rem;
+  text-align: center;
+}
+footer .footer-container {
+  justify-content: space-around;
+  margin-bottom: 4rem;
+}
+footer .footer-container .links, footer .footer-container .socials {
+  flex-direction: column;
+}
+footer .footer-container .links h3, footer .footer-container .socials h3 {
+  text-transform: uppercase;
+}
+footer .footer-container .links ul, footer .footer-container .socials ul {
+  flex-direction: column;
+  align-items: flex-start;
+}
+footer .footer-container .links ul li a:hover, footer .footer-container .socials ul li a:hover {
+  color: var(--color-yellow);
+  transition: allall 0.5s;
+}
+footer .footer-bottom {
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
