--- a/style.scss
+++ b/style.scss
@@ -96,7 +96,7 @@ ul{
     align-items: center;
     padding:1rem 2rem;
     background: var(--body-bg);
-    box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.281);
+    box-shadow: 0 0 3px 3px #ffcb2f59;
 
     position: sticky;
     top: 0;
@@ -207,7 +207,8 @@ ul{
         align-items: center;
 
         img{
-            height: 115%;
+            width:100% ;
+            height: 100%;
         }
     }
     .right{
@@ -248,6 +249,71 @@ ul{
         }
 
     }
+}
+@include tablet(){
+    .section1{
+        background: var(--color-yellow);
+        margin: 10rem auto 5rem auto;
+        width: 90vw;
+        padding: 0 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    
+       
+    
+        .left{
+            grid-area: left;
+            margin-top: -4rem;
+            justify-content: center;
+            align-items: center;
+    
+            img{
+                width:100% ;
+                height: 100%;
+            }
+        }
+        .right{
+            grid-area: right;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            gap: 0.8rem;
+    
+            div{
+                flex-direction: column;
+                gap: 0.6rem;
+    
+                .name{
+                    font-size: 4rem;
+                    font-weight: bold;
+                    color: white;
+                }
+                .tag{
+                    color: white;
+                    font-size: 2.2rem;
+                }
+            }
+            button{
+                border: none;
+                padding: 0.8rem 1.2rem;
+                border-radius: 2rem;
+                cursor:pointer;
+                background: var(--color-dark);
+                color: white;
+                margin: 1rem 0;
+            
+                a {
+                    i{
+                    color: var(--color-yellow);
+                    }
+                }   
+            }
+    
+        }
+    } 
+
 }
 // section2  banner
 .section2{
@@ -304,6 +370,67 @@ ul{
 
     
 }
+@include tablet(){
+    .section2{
+        margin-bottom: 7rem;
+        
+        .info-container{
+            max-width: 80%;
+            margin: auto;
+            padding: 2rem;
+            min-height: 7rem;
+            border: 2px solid var(--border-color);
+            border-radius: 100px;
+            justify-content: center;
+            align-items: center;
+           
+
+        }
+        .info-list{
+            width: 100%;
+            color: var(--text-color);
+            justify-content:center;
+            align-items: center;
+           
+    
+    
+            .info-content{
+                flex-direction: column;
+                .icon-container{
+                    width: rem;
+                    height: 3rem;
+                    border-radius: 50%;
+                    background-color: var(--color-yellow);
+                    
+                    justify-content: center;
+                    align-items: center;
+                    color: white;
+                }
+                i{
+                    font-size: 1.4rem;
+                }
+            }
+            span{
+                h5{
+                    font-weight:bolder;
+                    letter-spacing: 2px;
+                
+                }
+                p{
+                    color: var(--color-yellow);
+                }
+            }
+            .info-divider{
+                width: 100%;
+                height: 2px;
+                background: black;
+            }
+        }
+    
+    
+        
+    }
+}
 
 // SECTION3 skills
 
@@ -325,6 +452,31 @@ ul{
 
             i{
                 font-size: 3rem;
+            }
+        }
+    }
+}
+@include tablet(){
+    .section3{
+        width: 80%;
+        margin: 7rem;
+        padding: 7rem auto;
+       
+      
+        
+        .skills-container{
+            flex-direction: column;
+            justify-content: center;
+            gap: 8rem;
+    
+            div{
+                flex-direction: column;
+                align-items: center;
+                font-weight: bolder;
+    
+                i{
+                    font-size: 3rem;
+                }
             }
         }
     }
@@ -388,7 +540,7 @@ ul{
             padding: 0 2rem;
 
             .img{
-                width: 100%;
+                display: none;
             }
         }
         
@@ -429,6 +581,72 @@ ul{
                         }
                     }
                    
+                }
+            }
+        }
+    }
+}
+@include tablet(){
+    .section5{
+        margin: 4rem;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-top: 5rem;
+        
+    
+        .about-container{
+            padding: 3rem;
+            gap: 5rem;
+            flex-direction: column;
+            
+            .left{
+                width: 50%;
+                padding: 0 2rem;
+    
+                .img{
+                    display: none;
+                }
+            }
+            
+            
+            .right{
+            flex-direction: column;
+            width: 50%;
+            gap: 2rem;
+            padding: 0 2rem;
+    
+                h2{
+                    font-size: 3.5rem;
+                }
+    
+                p{
+                    &:nth-child(3){
+                        font-weight: 600;
+                    }
+                }
+                div{
+                    flex-direction: column;
+                    
+                    .tag{
+                        font-weight: 600;
+                    }
+                    div{
+                        flex-direction: row;
+    
+                        span{
+                            padding: 0.5rem 0.7rem;
+                            border-radius: 10px;
+                            &:hover{
+                                cursor: pointer;
+                                background: rgba(128, 128, 128, 0.408);
+                                transition:all 0.3s;
+                                color:white;
+                                box-shadow: 0 0 10px grey;
+                            }
+                        }
+                       
+                    }
                 }
             }
         }
