--- a/style.css
+++ b/style.css
@@ -583,4 +583,16 @@ footer .footer-container .links ul li a:hover, footer .footer-container .socials
 }
 footer .footer-bottom {
   text-align: center;
+}
+
+.round {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background: var(--color-yellow);
+  color: white;
+  border: none;
+  position: fixed;
+  bottom: 10px;
+  right: 5px;
 }/*# sourceMappingURL=style.css.map */
