--- a/style.scss
+++ b/style.scss
@@ -750,3 +750,14 @@ footer{
     text-align: center;
 }
 }
+.round{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background: var(--color-yellow);
+    color: white;
+    border: none;
+    position: fixed;
+    bottom: 10px;
+    right: 5px;
+}
